[#2513] Fixed the bug where the Files table collapses.
The slideToggle was setting the table to 'display: block' instead of
'display:table', the default for tables.  Ended up wrapping the table
in a div that does the toggling instead.

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -645,6 +645,10 @@ div.issue h3 {
 .attachments h4.closed {
 	background-position:right 5px;
 }
+
+table.files {
+    display: table;
+}
 #content table.files td, #content table.files th, #content table.files {
 	border:0;
 	background:none;
